Centered title button on page and fixed overflow issues

--- a/jam-desk/src/App.css
+++ b/jam-desk/src/App.css
@@ -3,12 +3,14 @@ body {
     margin: 0;
     padding: 0;
 
+    /* overflow: hidden; */
+
 }
 
 .App {
 
-    width: 100vw;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
 
     background-color: black;
     color: white;
